# BBC-Basic-Rust-Interpreter

./: .gitignore  Cargo.toml  README.md  SESSION_SUMMARY_2024-12-22.md  demo.sh  development-log.md  sinewave.bas  test.bas  test_def_fn.bas  test_error_handling.bas  test_functions.bas  test_if.bas  test_local.bas  test_on_goto.bas  test_operators.bas  test_parse_func.rs  test_proc.bas  test_proc_nested.bas  test_proc_params.bas  test_proc_simple.bas  test_tokenize.sh  test_while.bas
.kiro/specs/bbc-basic-interpreter/: design.md  requirements.md  tasks.md
examples/: advanced_graphics_demo.bas  graphics_demo.bas
specs/: advanced-basic.md  features.md  plan.md
src/: lib.rs  main.rs
src/executor/: mod.rs
src/extensions/: mod.rs
src/filesystem/: mod.rs
src/graphics/: mod.rs
src/memory/: mod.rs
src/os/: mod.rs
src/parser/: mod.rs
src/program/: mod.rs
src/sound/: mod.rs
src/tokenizer/: mod.rs
src/variables/: mod.rs
tests/: advanced_graphics_tests.rs  graphics_tests.rs
