[package]
name = "bbc-basic-interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
# For property-based testing
quickcheck = "1.0"
quickcheck_macros = "1.0"
# For random number generation (RND function)
rand = "0.8"

[dev-dependencies]
# Additional testing utilities
quickcheck = "1.0"
quickcheck_macros = "1.0"